tests/hevm/fail/simple/simple.act
constructor of A
interface constructor()

iff

  CALLVALUE == 0

creates

  mapping (uint=>uint) x := []

behaviour f of A
interface f()

iff

  CALLVALUE == 0

storage

  x[0] => 1

returns

  2